apps/workloads/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`homepage.oremuslabs.app`)
    services:
    - name: homepage
      port: 80
  tls: {}
