apps/workloads/homepage/router.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-upstream
  namespace: traefik
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: router-upstream
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.10.10.1
    ports:
      - name: http
        port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: router
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`router.oremuslabs.app`)
    services:
    - name: router-upstream
      namespace: traefik
      port: 80
  tls: {}
